# Mobapp-Frontend-

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  docker-compose.yml  docker-stack.yml  index.py  pyproject.toml
environment/: .env.development  .env.prod  settings.py
layout/: __init__.py
layout/sidebar/: sidebar.py  sidebar_callbacks.py  sidebar_one_model.py  sidebar_one_model_callbacks.py
notebooks/: Untitled.ipynb  new_databases.ipynb
pages/anomalies_detection_region/: adr.py  adr_callbacks.py  adr_data.py  sidebar.py  sidebar_callbacks.py
pages/compare_anomalies_detection_region/: c_adr.py  c_adr_callbacks.py  c_adr_data.py  sidebar.py
pages/eda/: eda.py  eda_callbacks.py  eda_data.py  sidebar.py  sidebar_callbacks.py
pages/eval_model/: eval_model.py  eval_model_callbacks.py  eval_model_data.py  sidebar.py  sidebar_callbacks.py
scripts/: build.sh  deploy.sh
styles/: style.py
utils/: extract_data.py  figure_functions.py  request_functions.py
