[tool.poetry]
name = "mobapp-frontend"
version = "0.1.0"
description = ""
authors = ["Saci <saciperere@riseup.net>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^1.21.0"
pandas = "^1.3.2"
ipython = "^7.27.0"
requests = "^2.26.0"
dash-table = "^4.12.0"
dash-bootstrap-components = "^0.13.0"
python-dotenv = "^0.19.0"
Flask-Caching = "^1.10.1"
jupyter = "^1.0.0"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
python-lsp-server = "^1.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
